// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIENT /w SSR: await dispatch(firstRoute()) -- no thunks etc called 1`] = `
Object {
  "hash": "",
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "index": 0,
    "kind": "load",
    "length": 1,
    "pathname": "/second",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": false,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "pathname": "",
      "payload": Object {},
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "scene": "",
    "search": "",
    "url": "/second",
  },
  "payload": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`CLIENT /w SSR: await dispatch(firstRoute()) -- no thunks etc called 2`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "state": Object {},
      "url": "/second",
    },
  ],
  "hasSSR": false,
  "hash": "",
  "index": 0,
  "kind": "load",
  "length": 1,
  "pathname": "/second",
  "payload": Object {},
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hasSSR": false,
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "pathname": "",
    "payload": Object {},
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "type": "SECOND",
  "url": "/second",
}
`;

exports[`SERVER: await dispatch(firstRoute()) -- redirected route not dispatched 1`] = `
Object {
  "location": Object {
    "committed": true,
    "kind": "redirect",
    "status": 302,
    "url": "/third",
  },
  "status": 302,
  "type": "THIRD",
  "url": "/third",
}
`;

exports[`SERVER: await dispatch(firstRoute()) -- redirected route not dispatched 2`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "state": Object {},
      "url": "/second",
    },
  ],
  "hasSSR": true,
  "hash": "",
  "index": 0,
  "kind": "load",
  "length": 1,
  "pathname": "/second",
  "payload": Object {},
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hasSSR": true,
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "pathname": "",
    "payload": Object {},
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "type": "SECOND",
  "url": "/second",
}
`;
